set orderby to orders page to show newest orders first and fixed order number display on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -144,6 +144,13 @@ i.fab.fa-linkedin-in {
     width: auto;
 }
 
+a.order-number{
+    text-overflow: ellipsis;
+    max-width: 25vw;
+    overflow: hidden;
+    display: inline-block;
+
+}
 
 /* Media Queries: */
 
